[package]
name = "cargo-autoken"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
clap-cargo = { version = "0.13.0", features = ["cargo_metadata"] }
directories = "5.0.1"
rustc-build-sysroot = "0.4.2"

[build-dependencies]
anyhow = "1.0.75"
sha256 = { version = "1.4.0", default-features = false }
