[package]
name = "cargo-autoken"
description = "A rust-lang static analysis tool to automatically check for runtime borrow violations"
repository = "https://github.com/Radbuglet/autoken"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
clap-cargo = { version = "0.13.0", features = ["cargo_metadata"] }
directories = "5.0.1"
rustc-build-sysroot = "0.4.2"

[build-dependencies]
anyhow = "1.0.75"
autoken-rustc = { path = "../rustc", version = "=0.1.0", artifact = "bin" }
sha256 = { version = "1.4.0", default-features = false }
