[package]
name = "autoken-rustc"
description = "A rust-lang static analysis tool to automatically check for runtime borrow violations"
repository = "https://github.com/Radbuglet/autoken"
license = "MIT"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
scopeguard = "1.2.0"
smallvec = "1.11.1"
